--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
-          GITHUB_TOKEN: ${{ }}
+          GITHUB_TOKEN: ${{ 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 }}
           USERNAME: ${{ github.FoundFun }}
       - name: Commit & Push
         run: |
